Prevent weid header overflows

--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -20,6 +20,7 @@ header
   font-size: 32pt
   letter-spacing: 7pt
   color: #777
+  overflow: clip
   a
     display: block
     margin: 0 auto
